--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
-    "ethers": "^5.6.4",
+    "chai": "^4.3.6",
+    "ethers": "^5.6.5",
     "hardhat": "^2.9.3",
     "hardhat-deploy": "^0.11.4",
     "ts-node": "^10.7.0",
@@ -13,6 +15,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13"
   }
 }
