--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
+    "fs": "^0.0.1-security",
     "hardhat-deploy-ethers": "^0.3.0-beta.13"
   }
 }
